<resources>
    <string name="app_name">MyMensa</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_city_select">CitySelect</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="vegan">Vegan</string>
    <string name="vegetarisch">Vegetarisch</string>
    <string name="glutenfrei">Glutenfrei</string>
    <string name="laktosefrei">Laktosefrei</string>
    <string name="ohne_schweinefleisch">Ohne Schweinefleisch</string>
    <string name="ohne_rindfleisch">Ohne Rindfleisch</string>
    <string name="ohne_gefluegel">Ohne Geflügel</string>
    <string name="alkoholfrei">Alkoholfrei</string>
</resources>