<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DietSelect">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/mensaHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:fontFamily="sans-serif-medium"
            android:text="Deine Mensen:"
            android:textAlignment="center"
            android:textColor="@color/text_color"
            android:textSize="34sp"
            android:typeface="normal"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="8dp" />

        <Button
            android:id="@+id/finishButton"
            style="@style/Widget.MaterialComponents.FloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="Weiter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/diet_select_chip_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintBottom_toTopOf="@+id/mensaNextButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mensaHeader">

            <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:id="@+id/vegan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vegan"
                />

            <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:id="@+id/vegetarien"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vegetarisch"
                />

            <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:id="@+id/glutenFree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/glutenfrei"
                />

            <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:id="@+id/lactoseFree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/laktosefrei"
                />

            <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:id="@+id/porkFree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ohne_schweinefleisch"
                />

            <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:id="@+id/beefFree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ohne_rindfleisch"
                />

            <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:id="@+id/poultryFree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ohne_gefluegel"
                />

            <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:id="@+id/alcoholFree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alkoholfrei"
                />
        </com.google.android.material.chip.ChipGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>